fix availableScreenRect for applets/containments

--when an applet or desktop containment is not
in the current activity and requests ::availableScreenRect()
value, Plasma::Corona decides to return as valid screenId: -1.
That behavior can lead to applets going under plasma panels
that have set visibility to AlwaysVisible. Such panels should
always been taken into account when calculating the
available screen geometry.

BUG:445495